--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -1509,6 +1509,7 @@ pages = "24--31"}
 @online{CTANacmart,
   author =    {Boris Veytsman},
   title =  {acmart---{C}lass for typesetting publications of {ACM}},
+  year = 2017,
   url =    {http://www.ctan.org/pkg/acmart},
   lastaccessed = {May 27, 2017}
   }
