Reformatted a log entry

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3166,8 +3166,8 @@
 %
 % Adding |hyperxmp|
 % \changes{v1.72}{2020/06/14}{Added hyperxmp}
-% \changes{v1.76}{2021/02/21}{Moved before hyperref, see
-% https://github.com/borisveytsman/acmart/issues/425}
+% \changes{v1.76}{2021/02/21}{Moved hyperxmp before hyperref, see
+% \url{https://github.com/borisveytsman/acmart/issues/425}}
 %    \begin{macrocode}
 \RequirePackage{hyperxmp}
 %    \end{macrocode}
