Correct capitalization of the title of the sample text

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -104,7 +104,7 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{The Name of the Title is Hope}
+\title{The Name of the Title Is Hope}
 %<sigconf-i13n>\translatedtitle{french}{Le nom du titre est l'espoir}
 %<sigconf-i13n>\translatedtitle{german}{Der Name des Titels ist Hoffnung}
 %<sigconf-i13n>\translatedtitle{spanish}{El nombre del título es esperanza}
