Fix German translation

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -220,13 +220,12 @@
 \end{translatedabstract}
 
 \begin{translatedabstract}{german}
-  Ein übersichtliches und gut dokumentiertes \LaTeX\-Dokument wird als
-  Artikel, der für die Veröffentlichung durch ACM in einem Tagungsband
-  formatiert wurde oder Zeitschriftenveröffentlichung. Basierend auf
-  der Dokumentenklasse ``acmart'', this Artikel präsentiert und
-  erklärt auch viele der gängigen Variationen so viele der
-  Formatierungselemente, die ein Autor in der verwenden darf
-  Vorbereitung der Dokumentation ihrer Arbeit.
+  Es wird ein übersichtliches und gut dokumentiertes \LaTeX\-Dokument präsentiert,
+  welches für die Veröffentlichung durch ACM in einem Tagungsband oder
+  als Zeitschriftenpublikation formatiert wurde.
+  Basierend auf der Dokumentenklasse “acmart” präsentiert und erklärt dieser Artikel
+  viele der Formatierungselemente sowie auch viele der gängigen Variationen,
+  die ein Autor bei der Beschreibung seiner Arbeit verwenden darf.
 \end{translatedabstract}
 
 \begin{translatedabstract}{spanish}
