Fix German keywords

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -281,8 +281,8 @@
 %<sigconf-i13n>\translatedkeywords{french}{ensembles de données,
 %<sigconf-i13n> réseaux de neurones,
 %<sigconf-i13n>  détection du regard, marquage de texte}
-%<sigconf-i13n>  \translatedkeywords{german}{Datensätze,
-%<sigconf-i13n> neuronale Netze, Blickerkennung, Text-Tagging}
+%<sigconf-i13n>  \translatedkeywords{german}{Datensammlungen,
+%<sigconf-i13n> neuronale Netze, Blickerkennung, Textklassifizierung}
 %<sigconf-i13n> \translatedkeywords{spanish}{conjuntos de datos,
 %<sigconf-i13n> redes neuronales, detección de mirada, etiquetado de texto} 
 
