separate keywords by semi-colons

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -925,10 +925,10 @@
 % The command
 % \cs{keywords}\marg{keyword, keyword,\ldots} sets keywords for the
 % article.  They must be
-% separated by commas, for example,
+% separated by semi-colons, for example,
 % \begin{verbatim}
-% \keywords{wireless sensor networks, media access control,
-% multi-channel, radio interference, time synchronization}
+% \keywords{wireless sensor networks; media access control;
+% multi-channel; radio interference; time synchronization}
 % \end{verbatim}
 %
 % \DescribeEnv{CCSXML}%
