--- a/acmart.dtx
+++ b/acmart.dtx
@@ -106,6 +106,7 @@
 %  Yegor Bugayenko,
 %  Benjamin Byholm,
 %  John Collins,
+%  Roberto Di Cosmo,
 %  Nils Anders Danielsson,
 %  Michael Ekstrand,
 %  Matthew Fluet,
@@ -2083,7 +2084,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2022/02/19 v1.83 Typesetting articles for the Association for Computing Machinery]
+[2022/04/09 v1.84 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
