--- a/README
+++ b/README
@@ -12,6 +12,9 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.84   Support for BibLaTeX rewritten (thanks to
+	       Roberto Di Cosmo and Kartik Singhal) 
+
 Version 1.83   Support for multilanguage papers
 	       ISSN changes for some journals
 
