--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -146,7 +146,7 @@
 %% allowing the author to define a "short title" to be used in page headers.
 \title{The Name of the Title Is Hope}
 %<sigconf-i13n>\translatedtitle{french}{Le nom du titre est l'espoir}
-%<sigconf-i13n>\translatedtitle{german}{Der Name des Titels ist Hoffnung}
+%<sigconf-i13n>\translatedtitle{german}{Der Name des Titels ist 'Hoffnung'}
 %<sigconf-i13n>\translatedtitle{spanish}{El nombre del título es esperanza}
 
 %%
@@ -233,7 +233,7 @@
 %% other information printed in the page headers. This command allows
 %% the author to define a more concise list 
 %% of authors' names for this purpose.
-\renewcommand{\shortauthors}{Trovato and Tobin, et al.}
+\renewcommand{\shortauthors}{Trovato et al.}
 
 %%
 %% The abstract is a short summary of the work to be presented in the
@@ -263,7 +263,7 @@
   Es wird ein übersichtliches und gut dokumentiertes \LaTeX\-Dokument präsentiert,
   welches für die Veröffentlichung durch ACM in einem Tagungsband oder
   als Zeitschriftenpublikation formatiert wurde.
-  Basierend auf der Dokumentenklasse “acmart” präsentiert und erklärt dieser Artikel
+  Basierend auf der Dokumentenklasse ``acmart'' präsentiert und erklärt dieser Artikel
   viele der Formatierungselemente sowie auch viele der gängigen Variationen,
   die ein Autor bei der Beschreibung seiner Arbeit verwenden darf.
 \end{translatedabstract}
