--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1725,6 +1725,7 @@
 % and select the approriate bibliography style, as follows
 % \begin{verbatim}
 % \RequirePackage[
+%  datamodel=acmdatamodel,
 %  style=acmnumeric, % use style=acmauthoryear for publications that require it
 %  ]{biblatex}
 % \end{verbatim}
