--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -35,7 +35,7 @@
 %% \BibTeX command to typeset BibTeX logo in the docs
 \AtBeginDocument{%
   \providecommand\BibTeX{{%
-    \normalfont B\kern-0.5em{\scshape i\kern-0.25em b}\kern-0.8em\TeX}}}
+    Bib\TeX}}}
 
 %% Rights management information.  This information is sent to you
 %% when you complete the rights form.  These commands have SAMPLE
@@ -126,6 +126,7 @@
 %%
 %% Bibliography style
 \RequirePackage[
+  datamodel=acmdatamodel,
 %<!acmsmall-biblatex>  style=acmnumeric,
 %<acmsmall-biblatex>  style=acmauthoryear,
   ]{biblatex}
