--- a/README
+++ b/README
@@ -12,6 +12,10 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.85.  Bug fixes
+	       Added support for Creative Commons licenses (requires
+	       doclicense images)
+
 Version 1.84   Support for BibLaTeX rewritten (thanks to
 	       Roberto Di Cosmo and Kartik Singhal)
 	       Corrected German translation (thanks to Dirk Beyer)
