--- a/README
+++ b/README
@@ -15,6 +15,7 @@ Changes
 Version 1.85.  Bug fixes
 	       Added support for Creative Commons licenses (requires
 	       doclicense images)
+	       New journals
 
 Version 1.84   Support for BibLaTeX rewritten (thanks to
 	       Roberto Di Cosmo and Kartik Singhal)
